--- a/src/components/Rockets/Rockets.css
+++ b/src/components/Rockets/Rockets.css
@@ -1,20 +1,52 @@
 .rockets-section {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    gap: 24px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 24px;
+  margin-left: 4%;
 }
 
 .rocket-image img {
-    width: 200px;
-    height: 160px;
+  width: 200px;
+  height: 160px;
 }
 
 .rocket-button {
-    padding: 8px;
-    background-color: dodgerblue;
-    color: #fff;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
+  padding: 8px;
+  background-color: dodgerblue;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.rocket-description {
+  width: 70%;
+  line-height: 1.3rem;
+}
+
+.badge {
+  background-color: #31a2b8;
+  color: #fff;
+  border-radius: 5px;
+  margin-right: 0.58rem;
+  padding: 1px 3px;
+}
+
+.reserved {
+  padding: 0.5rem;
+  color: gray;
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid gray;
+  cursor: pointer;
+}
+
+.not-reserved {
+  padding: 0.5rem;
+  color: #fff;
+  background-color: #1083fd;
+  border-radius: 4px;
+  border: 1px solid #1782fc;
+  cursor: pointer;
 }
