--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,6 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
-  background: rgba(254,254,254,0.9);
+  background: rgba(254, 254, 254, 0.9);
   backdrop-filter: saturate(10%) blur(10px);
 }
