--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,7 +34,7 @@
 
 .rocket-logo {
   width: 6.2rem;
-  height: auto
+  height: auto;
 }
 
 .text-logo {
@@ -45,4 +45,3 @@
   color: #000;
   text-decoration: underline;
 }
-
