--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,9 +4,10 @@
   align-items: center;
   gap: 44px;
   width: 100%;
-  height: 8rem;
-  box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0;
-  margin-bottom: 3%;
+  /* box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0; */
+  position: fixed;
+  z-index: 11;
+  background: transparent;
 }
 
 .nav-group {
@@ -18,7 +19,8 @@
 
 .nav-item {
   font-size: 1.5rem;
-  color: #45a3ff;
+  color: #fff;
+  // color: #45a3ff;
   text-decoration: none;
 }
 
@@ -26,7 +28,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: #000;
+  color: #8dc6ff;
   font-weight: bold;
   text-decoration: none;
   margin-left: 4%;
