--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,5 @@
 .app__home-bg1 {
-  background-image: url("../../images/homebg1.png");
+  background-image: url("../../images/home7.jpg");
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -36,11 +36,30 @@
         text-transform: uppercase;
         font-size: 1rem;
         margin-top: 2rem;
+        // margin-bottom: 3rem;
         border: 3px solid #8dc6ff;
         padding: 0.8rem;
         width: 15%;
         text-align: center;
         font-size: 1.4rem;
+      }
+
+      @media screen and (max-width: 850px) {
+        p {
+          font-size: 1.8rem;
+          line-height: 1.2;
+        }
+
+        h2 {
+          font-size: 1.8rem;
+          line-height: 1.6;
+        }
+
+        h6 {
+          font-size: 1rem;
+          line-height: 1.6;
+          width: 60%;
+        }
       }
     }
 
@@ -52,6 +71,10 @@
       font-weight: 900;
       bottom: 0;
       animation: MoveUpDown 4s linear infinite;
+
+      @media screen and (max-width: 850px) {
+        margin-top: 6rem;
+      }
     }
 
     @keyframes MoveUpDown {
@@ -63,5 +86,228 @@
         transform: translateY(-100px);
       }
     }
+
+    @media screen and (max-width: 850px) {
+      width: 94%;
+      margin: 0 auto;
+    }
+
+    @media screen and (max-width: 850px) {
+      width: 100%;
+      height: 100vh;
+    }
+  }
+
+  @media screen and (max-width: 850px) {
+    width: 100%;
+    height: 100vh;
+  }
+}
+
+.app__home-bg2 {
+  background-image: url("../../images/homebg6.jpg");
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+
+  .app__home-cover1 {
+    backdrop-filter: blur(1px);
+    background: rgba(255, 255, 255, 0.1);
+    width: 100%;
+    height: 100vh;
+
+    div {
+      padding-top: 16rem;
+      margin-left: 5rem;
+
+      p {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 2rem;
+        line-height: 2.3;
+
+        @media screen and (max-width: 850px) {
+          font-size: 1rem;
+        }
+      }
+
+      h2 {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 3.5rem;
+        font-weight: 700;
+        line-height: 1.2;
+
+        @media screen and (max-width: 850px) {
+          font-size: 1.8rem;
+          line-height: 1.6;
+        }
+      }
+
+      h6 {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 1rem;
+        margin-top: 2rem;
+        // margin-bottom: 4rem;
+        border: 3px solid #8dc6ff;
+        padding: 0.8rem;
+        width: 15%;
+        text-align: center;
+        font-size: 1.4rem;
+
+        @media screen and (max-width: 850px) {
+          font-size: 1rem;
+          line-height: 1.6;
+          width: 60%;
+        }
+      }
+    }
+
+    .app__key {
+      text-align: center;
+      font-size: 3rem;
+      color: #fff;
+      cursor: pointer;
+      font-weight: 900;
+      bottom: 0;
+      animation: MoveUpDown 4s linear infinite;
+
+      @media screen and (max-width: 850px) {
+        margin-top: 6rem;
+      }
+    }
+
+    @keyframes MoveUpDown {
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-100px);
+      }
+    }
+  }
+}
+
+.app__home-bg3 {
+  background-image: url("../../images/launch2.jpg.crdownload");
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+
+  .app__home-cover2 {
+    backdrop-filter: blur(2px);
+    background: rgba(255, 255, 255, 0.3);
+    width: 100%;
+    height: 100vh;
+
+    div {
+      padding-top: 20rem;
+      margin-left: 5rem;
+
+      p {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 2rem;
+        line-height: 2.3;
+
+        @media screen and (max-width: 850px) {
+          font-size: 1rem;
+        }
+      }
+
+      h2 {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 3.5rem;
+        font-weight: 700;
+        line-height: 1.2;
+
+        @media screen and (max-width: 850px) {
+          font-size: 1.8rem;
+          line-height: 1.6;
+        }
+      }
+
+      h6 {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 0.8rem;
+        margin-top: 2rem;
+        border: 3px solid #8dc6ff;
+        padding: 0.8rem;
+        width: 15%;
+        text-align: center;
+        font-size: 1.4rem;
+
+        @media screen and (max-width: 850px) {
+          font-size: 1rem;
+          line-height: 1.6;
+          width: 60%;
+        }
+      }
+    }
+
+    .app__key {
+      text-align: center;
+      font-size: 3rem;
+      color: #fff;
+      cursor: pointer;
+      font-weight: 900;
+      bottom: 0;
+      animation: MoveUpDown 4s linear infinite;
+
+      @media screen and (max-width: 850px) {
+        margin-top: 6rem;
+      }
+    }
+
+    @keyframes MoveUpDown {
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-100px);
+      }
+    }
+  }
+}
+
+.app__footer {
+  width: 100%;
+  height: 20vh;
+  background: #000;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  font-size: 1.5rem;
+
+  a {
+    color: #fff;
+
+    &:hover {
+      border: 1px solid #fff;
+      padding: 0.5rem;
+      border-radius: 10px;
+    }
+  }
+
+  @media screen and (max-width: 850px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    gap: 0;
+    font-size: 1.3rem;
+    padding: 1.4rem;
+    line-height: 2.2rem;
   }
 }
