--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-.navigation-section {
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,11 +10,22 @@
   background: transparent;
 }
 
+.navbar.fixed {
+  box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0;
+  backdrop-filter: blur(189px);
+  // background-color: #000;
+  transition: all 0.3s ease-in-out;
+}
+
 .nav-group {
   display: flex;
   list-style-type: none;
   gap: 44px;
   margin-right: 4%;
+
+  @media screen and(max-width: 850px) {
+    display: none;
+  }
 }
 
 .nav-item {
@@ -26,21 +37,117 @@
 
 .nav-link {
   display: flex;
-  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
-  color: #8dc6ff;
+  color: #fff;
   font-weight: bold;
-  text-decoration: none;
-  margin-left: 4%;
+  padding: 1rem 0 1rem 2rem;
+
+  img {
+    width: 80px;
+    height: auto;
+    margin-right: 12px;
+
+    @media screen and(min-width: 2000px) {
+      width: 180px;
+      height: 40px;
+    }
+
+    @media screen and(max-width: 850px) {
+      width: 60px;
+      height: auto;
+    }
+  }
 }
 
-.rocket-logo {
-  width: 6.2rem;
-  height: auto;
+.app__navbar-menu {
+  width: 36px;
+  height: 36px;
+  position: relative;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  // padding-right: 5rem;
+
+  svg {
+    width: 75%;
+    height: 75%;
+    color: #fff;
+  }
+
+  div {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 5;
+    padding: 1rem;
+    width: 80%;
+    height: 100vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+    background: url("../../images/bg4.jpeg");
+    background-size: cover;
+    background-repeat: repeat;
+    background-color: #fff;
+    box-shadow: 0 0 20px rgba(168, 168, 168, 0.8);
+
+    svg {
+      width: 34px;
+      height: 34px;
+      color: #fff;
+      margin: 0.5rem 1rem;
+    }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+
+      li {
+        list-style-type: none;
+        margin: 1rem;
+
+        .nav-item {
+          text-decoration: none;
+          color: #fff;
+          font-size: 1rem;
+          text-transform: uppercase;
+          font-weight: bold;
+          transition: all 0.3s ease-in-out;
+          font-size: 1.2rem;
+
+          &:hover {
+            color: #8dc6ff;
+          }
+        }
+      }
+    }
+
+    @media screen and(min-width: 8500px) {
+      display: none;
+    }
+  }
+  @media screen and(min-width: 850px) {
+    display: none;
+  }
 }
 
 .text-logo {
   font-size: 2rem;
+
+  @media screen and(max-width: 850px) {
+    font-size: 1.2rem;
+  }
 }
 
 .active {
