--- a/src/components/Rockets/Rockets.scss
+++ b/src/components/Rockets/Rockets.scss
@@ -1,20 +1,53 @@
-.rockets-section {
-  background-image: url("../../images/home7.jpg");
-  width: 100%;
+.app__rocket {
+  background-image: url("../../images/bg5.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  font-size: 1.1rem;
-  gap: 24px;
-  margin-left: 4%;
-  color: #fff;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
+.app__rockets-details {
+  padding-top: 7rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  width: 90%;
+  margin: 0 auto;
+  color: #fff;
 
-.rocket-image img {
-  width: 16rem;
-  height: 12rem;
+  .app__rockets-title {
+    h1 {
+      font-size: 4rem;
+      font-weight: 800;
+      text-transform: uppercase;
+    }
+  }
+
+  .app__rocket-info {
+    display: flex;
+    flex: 1;
+    border: 2px solid #fff;
+    padding: 2rem;
+    justify-content: space-between;
+    gap: 3rem;
+    border-radius: 10px;
+
+    .rocket-information {
+      p {
+        line-height: 3;
+      }
+    }
+
+    .rocket-image {
+      img {
+        width: 32rem;
+        // height: 12rem;
+      }
+    }
+  }
 }
 
 .rocket-button {
@@ -27,7 +60,7 @@
 }
 
 .rocket-description {
-  width: 91%;
+  // width: 91%;
   line-height: 1.4rem;
   margin-bottom: 0.9rem;
 }
