--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,5 @@
 .app__home-bg1 {
-  background-image: url("../../images/home7.jpg");
+  background-image: url("../../images/homebg1a.webp");
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -7,7 +7,7 @@
   height: 100vh;
 
   .app__home-cover {
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(1px);
     // background: rgba(255, 255, 255, 0.1);
     width: 100%;
     height: 100vh;
