--- a/src/components/Mission/mission.scss
+++ b/src/components/Mission/mission.scss
@@ -15,6 +15,34 @@
   background-size: cover;
   color: #fff;
   padding-top: 8rem;
+  background: #000;
+}
+
+.app__mission-header {
+  background: url('../../images/missionbg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  padding-top: 2rem;
+
+  p {
+    text-align: center;
+    line-height: 1.6;
+    font-size: 1.6rem;
+  }
+
+  @media screen and (max-width: 850px) {
+    padding: 1rem 1rem 0 1rem;
+    p {
+      text-align: center;
+      // line-height: 1;
+      font-size: 1.2rem;
+    }
+  }
 }
 
 .mission-table,
