Add changes to home

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,5 @@
 .app__home-bg1 {
-  background-image: url("../../images/homebg1a.webp");
+  background-image: url("../../images/homebg1c.jpg");
   width: 100%;
   background-size: cover;
   background-position: center;
