--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,60 +4,81 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100%;
 
   .app__home-cover {
     backdrop-filter: blur(1px);
     // background: rgba(255, 255, 255, 0.1);
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
     div {
-      padding-top: 17rem;
+      padding-top: 15rem;
       margin-left: 5rem;
+
+      @media screen and (max-width: 850px) {
+        margin-left: 1.3rem;
+      }
 
       p {
         color: #fff;
         text-transform: uppercase;
-        font-size: 2rem;
-        line-height: 2.3;
+        font-size: 1.5rem;
+        line-height: 2;
       }
 
       h2 {
         color: #fff;
         text-transform: uppercase;
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         font-weight: 600;
         line-height: 1.2;
       }
 
-      h6 {
+      .home-desc {
+        font-size: 1rem;
+        text-transform: none;
+      }
+
+      .home-link {
         color: #fff;
         text-transform: uppercase;
         margin-top: 1rem;
         border: 1px solid #fff;
-        padding: 0.8rem;
+        padding: 0.4rem;
         width: 20%;
         text-align: center;
-        font-size: 1.2rem;
         border-radius: 12px;
+        font-size: 1.5rem;
       }
 
       @media screen and (max-width: 850px) {
         p {
-          font-size: 1.8rem;
-          line-height: 1.2;
+          font-size: 1.2rem;
+          line-height: 1;
         }
 
         h2 {
-          font-size: 1.8rem;
-          line-height: 1.6;
+          font-size: 1.6rem;
+          line-height: 1.5;
         }
 
-        h6 {
-          font-size: 1rem;
-          line-height: 1.6;
-          width: 60%;
+        .home-desc {
+          margin-top: 2rem;
+          margin-bottom: 2rem;
+          font-size: 1.2rem;
+          line-height: 1.5;
+        }
+
+        .home-link {
+          text-transform: uppercase;
+          margin-top: 1rem;
+          border: 1px solid #fff;
+          padding: 0.4rem;
+          width: 70%;
+          text-align: center;
+          border-radius: 12px;
+          font-size: 1.5rem;
         }
       }
     }
@@ -109,7 +130,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100%;
 
   .app__home-cover1 {
     backdrop-filter: blur(1px);
@@ -118,8 +139,13 @@
     height: 100vh;
 
     div {
-      padding-top: 16rem;
+      padding-top: 12rem;
       margin-left: 5rem;
+
+      @media screen and (max-width: 850px) {
+        padding-top: 3rem;
+        margin-left: 1.3rem;
+      }
 
       p {
         color: #fff;
@@ -135,32 +161,36 @@
       h2 {
         color: #fff;
         text-transform: uppercase;
-        font-size: 3.5rem;
-        font-weight: 700;
+        font-size: 2.5rem;
+        font-weight: 600;
         line-height: 1.2;
 
         @media screen and (max-width: 850px) {
-          font-size: 1.8rem;
-          line-height: 1.6;
+          font-size: 1.6rem;
+          line-height: 1.5;
         }
       }
 
-      h6 {
+      .home-link {
         color: #fff;
         text-transform: uppercase;
-        font-size: 1rem;
-        margin-top: 2rem;
-        // margin-bottom: 4rem;
-        border: 3px solid #8dc6ff;
-        padding: 0.8rem;
-        width: 15%;
+        margin-top: 1rem;
+        border: 1px solid #fff;
+        padding: 0.4rem;
+        width: 20%;
         text-align: center;
-        font-size: 1.4rem;
+        border-radius: 12px;
+        font-size: 1.5rem;
 
         @media screen and (max-width: 850px) {
-          font-size: 1rem;
-          line-height: 1.6;
-          width: 60%;
+          text-transform: uppercase;
+          margin-top: 1rem;
+          border: 1px solid #fff;
+          padding: 0.4rem;
+          width: 70%;
+          text-align: center;
+          border-radius: 12px;
+          font-size: 1.5rem;
         }
       }
     }
@@ -192,21 +222,26 @@
 }
 
 .app__home-bg3 {
-  background-image: url("../../images/launch22.jpg");
+  background-image: url("../../images/rocketbg.jpeg");
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100%;
 
   .app__home-cover2 {
-    backdrop-filter: blur(2px);
-    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(1px);
+    // background: rgba(255, 255, 255, 0.3);
     width: 100%;
     height: 100vh;
 
     div {
-      padding-top: 20rem;
+      padding-top: 14rem;
       margin-left: 5rem;
+
+      @media screen and (max-width: 850px) {
+        padding-top: 3rem;
+        margin-left: 1.3rem;
+      }
 
       p {
         color: #fff;
@@ -222,31 +257,36 @@
       h2 {
         color: #fff;
         text-transform: uppercase;
-        font-size: 3.5rem;
-        font-weight: 700;
+        font-size: 2.5rem;
+        font-weight: 600;
         line-height: 1.2;
 
         @media screen and (max-width: 850px) {
-          font-size: 1.8rem;
-          line-height: 1.6;
+          font-size: 1.6rem;
+          line-height: 1.5;
         }
       }
 
-      h6 {
+      .home-link {
         color: #fff;
         text-transform: uppercase;
-        font-size: 0.8rem;
-        margin-top: 2rem;
-        border: 3px solid #8dc6ff;
-        padding: 0.8rem;
-        width: 15%;
+        margin-top: 1rem;
+        border: 1px solid #fff;
+        padding: 0.4rem;
+        width: 20%;
         text-align: center;
-        font-size: 1.4rem;
+        border-radius: 12px;
+        font-size: 1.5rem;
 
         @media screen and (max-width: 850px) {
-          font-size: 1rem;
-          line-height: 1.6;
-          width: 60%;
+          text-transform: uppercase;
+          margin-top: 1rem;
+          border: 1px solid #fff;
+          padding: 0.4rem;
+          width: 70%;
+          text-align: center;
+          border-radius: 12px;
+          font-size: 1.5rem;
         }
       }
     }
